# k8s-playground

./: .gitignore  Makefile  README.md
deploy/: 0_backend.yaml  1_frontend.yaml
frontend/: .flake8  Dockerfile  pyproject.toml
frontend/awesome_app/: app.py
frontend/awesome_app/config/: config.py
frontend/awesome_app/kube/: client.py
frontend/awesome_app/services/: healthz.py  index.py  kubeinfo.py
setup/: aetion-spec.yaml  registry.sh  setup.sh
setup/aws/: README.md  cloud-init.yaml  setup.sh
